# nifly

./: .gitignore  CMakeLists-Win.txt  CMakeLists.txt  CMakePresets.json  一些分析.md  编译相关说明.md
include/: BasicTypes.hpp  NifFile.hpp  NifUtil.hpp  Nodes.hpp  VertexData.hpp
src/: BasicTypes.cpp  CMakeLists.txt  NifFile.cpp
tests/: CMakeLists.txt  TestNifFile.cpp  TestUtil.cpp
